Add hobbies + edit logo

--- a/index.html
+++ b/index.html
@@ -136,11 +136,10 @@
                 <p>Culture du numérique, conception et développemnt web, méthodes agiles(Scrum) sur le modéle pédagogique du dev-bootcamp.</p>
                 <p>Je sais :
                 <ul>
-                  <li>Prendre en charge le développement d'applications informatiques dans le cadre de projets visant à automatiser un ou plusieurs processus en réponse à des demandes émanant d'une maîtrise d'ouvrage. Ces demandes peuvent être transmises par un chef de projet.</li>  
+                  <li>Prendre en charge le développement d'applications afin d'automatiser un ou plusieurs processus en réponse à des demandes émanant d'une maîtrise d'ouvrage ou d'un chef de projet.</li>  
                   <li>Mener seule le développement d'un projet ou travailler en équipe sous la conduite d'un chef de projet en appliquant les normes de qualité de l'entreprise ou du prestataire de services.</li>
-                  <li>M'adapter rapidement aux évolutions technologiques du secteur informatique. Et faire preuve d'organisation et de gestion du temps pour la réalisation du projet.</li>
-                  <li>Être mobile géographiquement et m'adapter aux nouveaux environnements de travail.</li>
-                  <li>Faire preuve de capacités relationnelles avec des interlocuteurs tels que la maîtrise d'ouvrage, les utilisateurs, le chef de projet, les experts techniques et les autres développeurs.</li>
+                  <li>M'adapter rapidement aux évolutions technologiques et faire preuve d'organisation et de gestion du temps pour la réalisation de projet.</li>
+                  <li>M'adapter aux nouveaux environnements de travail et faire preuve de capacités relationnelles avec des interlocuteurs tels que la maîtrise d'ouvrage, les utilisateurs, le chef de projet, les experts techniques et les autres développeurs.</li>
                 </p>
               </div>
             </div>
@@ -359,7 +358,7 @@
               Mobile-First &amp; Responsive Design</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Conception &amp; UML</li>
+              Conception UML &amp; pattern MVC</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Travail d'équipe &amp; Versioning</li>
@@ -382,21 +381,27 @@
               <img class="card-img-top" src="img/book.jpg" alt="book picture">
               <div class="card-body">
                 <h5 class="card-title">Lecture (diverses)</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">
+                  La lecture me permet de m'évader, d'exercer mon imagination et d'assouvir ma curiosité. Je lis touts types d'ouvrage sur touts types de support.
+                </p>
               </div>
             </div>
             <div class="card">
               <img class="card-img-top" src="img/animals.jpg" alt="Dog and cat picture">
               <div class="card-body">
                 <h5 class="card-title">Contact avec la nature et les animaux</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">
+                  Les animaux ont toujours fait partie de ma vie. Ils m'ont toujours fasciné et amusé. C'est aussi à leur contact que je me ressource. Et je suis toujours curieuse de découvrir de nouveaux paysages.
+                </p>
           </div>
           </div>
             <div class="card">
               <img class="card-img-top" src="img/web-development.jpg" alt="Computer picture">
               <div class="card-body">
                 <h5 class="card-title">Informatique - Développement web</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text">
+                  L'informatique m'a toujours intéressée et je reste à l'affût de toute nouveautés technologiques. 
+                </p>
               </div>
             </div>
           </div>
