--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="subheading mb-5">
             <h3 id="subheading-title">Alternance Concepteur(trice) Développeur(se) Informatique</h3>
             <p>26 ans,</p>
-            <p>Permis B + <i class="fas fa-car"></i></p>
+            <p>Permis B + <i class="fas fa-car"></i>,</p>
           </div>
           <p class="mb-5" id="subheading-text">
             Je prends en charge la conception et le développement d'applications informatiques. J’agis avec autonomie et le cas échéant avec des responsabilités d’animation et de coordination, dans le cadre de projets visant à automatiser un ou plusieurs processus de l'entreprise. Ces projets font
@@ -133,14 +133,7 @@
               <h3 class="mb-0">Titre professionnel niveau II de Développeur(se) Logiciel</h3>
               <div class="subheading mb-3">Simplon.co à Auch(32)</div>
               <div>
-                <p>Culture du numérique, conception et développemnt web, méthodes agiles(Scrum) sur le modéle pédagogique du dev-bootcamp.</p>
-                <p>Je sais :
-                <ul>
-                  <li>Prendre en charge le développement d'applications afin d'automatiser un ou plusieurs processus en réponse à des demandes émanant d'une maîtrise d'ouvrage ou d'un chef de projet.</li>  
-                  <li>Mener seule le développement d'un projet ou travailler en équipe sous la conduite d'un chef de projet en appliquant les normes de qualité de l'entreprise ou du prestataire de services.</li>
-                  <li>M'adapter rapidement aux évolutions technologiques et faire preuve d'organisation et de gestion du temps pour la réalisation de projet.</li>
-                  <li>M'adapter aux nouveaux environnements de travail et faire preuve de capacités relationnelles avec des interlocuteurs tels que la maîtrise d'ouvrage, les utilisateurs, le chef de projet, les experts techniques et les autres développeurs.</li>
-                </p>
+                <p>Culture du numérique, conception et développement web, méthodes agiles(Scrum) sur le modéle pédagogique du dev-bootcamp.</p>
               </div>
             </div>
             <div class="resume-date text-md-right">
@@ -382,7 +375,7 @@
               <div class="card-body">
                 <h5 class="card-title">Lecture (diverses)</h5>
                 <p class="card-text">
-                  La lecture me permet de m'évader, d'exercer mon imagination et d'assouvir ma curiosité. Je lis touts types d'ouvrage sur touts types de support.
+                  La lecture me permet de nourrir mon imagination et ma curiosité. Je lis tous types d'ouvrage sur tous types de support.
                 </p>
               </div>
             </div>
@@ -391,7 +384,7 @@
               <div class="card-body">
                 <h5 class="card-title">Contact avec la nature et les animaux</h5>
                 <p class="card-text">
-                  Les animaux ont toujours fait partie de ma vie. Ils m'ont toujours fasciné et amusé. C'est aussi à leur contact que je me ressource. Et je suis toujours curieuse de découvrir de nouveaux paysages.
+                  Les animaux m'ont toujours fasciné et amusé. C'est à leur contact que je me ressource.
                 </p>
           </div>
           </div>
@@ -400,7 +393,7 @@
               <div class="card-body">
                 <h5 class="card-title">Informatique - Développement web</h5>
                 <p class="card-text">
-                  L'informatique m'a toujours intéressée et je reste à l'affût de toute nouveautés technologiques. 
+                  L'informatique m'a toujours intéressé et je reste à l'affût de toutes nouveautés technologiques. 
                 </p>
               </div>
             </div>
