--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-
-<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
@@ -33,7 +31,13 @@
   </head>
 
   <body id="page-top">
+  
+    <!-- Back-to-top button -->
+    <a id="back-to-top" href="#" class="btn btn-secondary btn-lg back-to-top" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left">
+      <i class="fas fa-chevron-circle-up"></i>
+    </a> <!-- /Back-to-top button -->
 
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Alternance Concepteur(trice)</br>Développeur(se) Informatique</span>
@@ -63,10 +67,10 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav> <!-- / NAVBAR -->
 
+    <!-- INTRO -->
     <div class="container-fluid p-0">
-
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Émilie
@@ -81,57 +85,63 @@
             Je prends en charge la conception et le développement d'applications informatiques. J’agis avec autonomie et le cas échéant avec des responsabilités d’animation et de coordination, dans le cadre de projets visant à automatiser un ou plusieurs processus de l'entreprise. Ces projets font
             suite à des demandes formulées directement par un client, par une maîtrise d’ouvrage ou par l’intermédiaire d’un chef de projet, afin de réaliser de nouvelles applications ou la maintenance évolutive d'applications existantes.
           </p>
+          <!-- Social links + CV download -->
           <ul class="list-inline list-social-icons mb-0">
-          <li class="list-inline-item">
-              <a href="mailto:chauvin-e@orange.fr">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
             <li class="list-inline-item">
-              <a href="https://twitter.com/emilie_chauvin_" target="_blank">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/emilie-chauvin/" target="_blank">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://github.com/Emilie-dev" target="_blank">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <button id="CVbtn" type="button" 
-              class="btn btn-secondary btn-lg">
-              <a href="img/CV/Chauvin_Emilie_Alternance_Concepteur_Developpeur_Informatique.pdf" target="_blank" style="color: #fff; text-decoration: none">Mon CV&nbsp;<i class="fas fa-download"></i></a>
-        </button>
-      </li>
-          </ul>
+                <a href="mailto:chauvin-e@orange.fr">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://twitter.com/emilie_chauvin_" target="_blank">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/emilie-chauvin/" target="_blank">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/Emilie-dev" target="_blank">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <button id="CVbtn" type="button" 
+                class="btn btn-secondary btn-lg">
+                  <a href="img/CV/Chauvin_Emilie_Alternance_Concepteur_Developpeur_Informatique.pdf" target="_blank" style="color: #fff; text-decoration: none">Mon CV&nbsp;<i class="fas fa-download"></i></a>
+                </button>
+              </li>
+          </ul> <!-- / Social links + CV download -->
         </div>
-      </section>
+      </section> <!-- / INTRO -->
 
+      <!-- FORMATIONS -->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
           <h2 class="mb-5">Formations</h2>
-
+          <!-- F1 -->
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Titre professionnel niveau II de Développeur(se) Logiciel</h3>
-              <div class="subheading mb-3">Simplon.co à Auch(32)</div>
+              <div class="subheading mb-3">
+                <a id="link_Simplon" href="https://simplon.co/" target="_blank">
+                  <img id="logo_Simplon" src="img/logo_Simplon.png">
+                </a>à Auch(32)
+              </div>
               <div>
                 <p>Culture du numérique, conception et développement web, méthodes agiles(Scrum) sur le modéle pédagogique du dev-bootcamp.</p>
               </div>
@@ -140,7 +150,7 @@
               <span class="text-primary">Mars 2017 - Février 2018</span>
             </div>
           </div>
-
+          <!-- F2 -->
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Remise à niveau de comptabilité et bureautique</h3>
@@ -151,7 +161,7 @@
               <span class="text-primary">Février 2015</span>
             </div>
           </div>
-
+          <!-- F3 -->
            <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Licence 1 L.E.A anglais-espagnol</h3>
@@ -162,7 +172,7 @@
               <span class="text-primary">Septembre 2011 - Juin 2013</span>
             </div>
           </div>
-
+          <!-- F4 -->
            <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Baccalauréat Général Littéraire</h3>
@@ -173,14 +183,14 @@
               <span class="text-primary">Juin 2011</span>
             </div>
           </div>
-
         </div>
-      </section>
+      </section> <!-- / FORMATIONS -->
 
-<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+      <!-- EXPÉRIENCES -->
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Expériences professionnelles</h2>
-
+          <!-- E1 -->
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Stage Développeuse web et mobiles</h3>
@@ -193,7 +203,7 @@
               <span class="text-primary">Novembre 2017 - Janvier 2018</span>
             </div>
           </div>
-
+          <!-- E2 -->
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Saisonnière agricole</h3>
@@ -204,7 +214,7 @@
               <span class="text-primary">Août 2016</span>
             </div>
           </div>
-
+          <!-- E3 -->
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Stage Secrétaire comptable</h3>
@@ -215,7 +225,7 @@
               <span class="text-primary">Février 2016</span>
             </div>
           </div>
-
+          <!-- E4 -->
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CDD Vacataire en Douane</h3>
@@ -226,7 +236,7 @@
               <span class="text-primary">Septembre 2015 - Décembre 2015</span>
             </div>
           </div>
-
+          <!-- E5 -->
            <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Stage Technicienne de Support Informatique</h3>
@@ -237,8 +247,8 @@
               <span class="text-primary">Décembre 2013</span>
             </div>
           </div>
-
-           <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <!-- E6 -->
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Stage Auxiliaire vétérinaire</h3>
               <div class="subheading mb-3">Cliniques vétérinaires à Auch et Vic-Fezensac</div>
@@ -248,8 +258,8 @@
               <span class="text-primary">Décembre 2011 - Février 2011</span>
             </div>
           </div>
-
-           <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <!-- E7 -->
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Stage Technicienne de Laboratoire</h3>
               <div class="subheading mb-3">Centre Hospitalier d'Auch en Gascogne</div>
@@ -259,14 +269,14 @@
               <span class="text-primary">Février 2008</span>
             </div>
           </div>
-
         </div>
+      </section> <!-- / EXPÉRIENCES -->
 
-      </section>
+      <!-- COMPÉTENCES -->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
           <h2 class="mb-5">Compétences</h2>
-
+          <!-- List with Devicons -->
           <div class="subheading mb-3">Outils &amp; Languages de programmations</div>
           <ul class="list-inline list-icons">
             <li class="list-inline-item">
@@ -342,8 +352,8 @@
                 <i class="devicon-trello-plain-wordmark"></i>
               </a>
             </li>
-          </ul>
-
+          </ul> <!-- / List with Devicons -->
+          <!-- Compétences complémentaires -->
           <div class="subheading mb-3">Compétences complémentaires</div>
           <ul class="fa-ul mb-0">
             <li>
@@ -361,14 +371,15 @@
               <li>
               <i class="fa-li fa fa-check"></i>
               Veille technologique &amp; Anglais technique</li>
-          </ul>
+          </ul> <!-- / Compétences complémentaires -->
         </div>
-      </section>
+      </section> <!-- / COMPÉTENCES -->
 
+      <!-- INTÉRETS -->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Centres d'intérêts</h2>
-          
+          <!-- I1 -->
           <div class="card-group">
             <div class="card">
               <img class="card-img-top" src="img/book.jpg" alt="book picture">
@@ -379,6 +390,7 @@
                 </p>
               </div>
             </div>
+            <!-- I2 -->
             <div class="card">
               <img class="card-img-top" src="img/animals.jpg" alt="Dog and cat picture">
               <div class="card-body">
@@ -386,8 +398,9 @@
                 <p class="card-text">
                   Les animaux m'ont toujours fasciné et amusé. C'est à leur contact que je me ressource.
                 </p>
-          </div>
-          </div>
+              </div>
+            </div>
+            <!-- I3 -->
             <div class="card">
               <img class="card-img-top" src="img/web-development.jpg" alt="Computer picture">
               <div class="card-body">
@@ -398,50 +411,46 @@
               </div>
             </div>
           </div>
-
         </div>
+      </section> <!-- / INTÉRETS -->
 
-  <a id="back-to-top" href="#" class="btn btn-secondary btn-lg back-to-top" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left"><i class="fas fa-chevron-circle-up"></i></a>
-
-
-
-  <footer>
-
-    <ul class="list-inline list-social-icons mb-0">
-          <li class="list-inline-item">
-              <a href="mailto:chauvin-e@orange.fr">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://twitter.com/emilie_chauvin_" target="_blank">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/emilie-chauvin/" target="_blank">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://github.com/Emilie-dev" target="_blank">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-  </footer>  
+    <!-- FOOTER -->
+    <footer>
+      <ul class="list-inline list-social-icons mb-0">
+        <li class="list-inline-item">
+          <a href="mailto:chauvin-e@orange.fr">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a href="https://twitter.com/emilie_chauvin_" target="_blank">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a href="https://www.linkedin.com/in/emilie-chauvin/" target="_blank">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a href="https://github.com/Emilie-dev" target="_blank">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
+        </li>
+      </ul>
+    </footer> <!-- / FOOTER -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
