--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>CV - Alternance Concepteur(trice) Développeur(se) Informatique</title>
+    <title>Conceptrice Développeuse Web</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Alternance Concepteur(trice)</br>Développeur(se) Informatique</span>
+        <span class="d-block d-lg-none">Conceptrice</br>Développeuse Web</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profil.png" alt="profil picture">
         </span>
@@ -77,12 +77,12 @@
             <span class="text-primary">Chauvin</span>
           </h1>
           <div class="subheading mb-5">
-            <h3 id="subheading-title">Alternance Concepteur(trice) Développeur(se) Informatique</h3>
-            <p>26 ans,</p>
+            <h3 id="subheading-title">Conceptrice Développeuse Web</h3>
+            <p>28 ans,</p>
             <p>Permis B + <i class="fas fa-car"></i>,</p>
           </div>
           <p class="mb-5" id="subheading-text">
-            Je prends en charge la conception et le développement d'applications informatiques. J’agis avec autonomie et le cas échéant avec des responsabilités d’animation et de coordination, dans le cadre de projets visant à automatiser un ou plusieurs processus de l'entreprise. Ces projets font
+            Je prends en charge la conception et le développement de sites web. J’agis avec autonomie et le cas échéant avec des responsabilités d’animation et de coordination, dans le cadre de projets visant à automatiser un ou plusieurs processus de l'entreprise. Ces projets font
             suite à des demandes formulées directement par un client, par une maîtrise d’ouvrage ou par l’intermédiaire d’un chef de projet, afin de réaliser de nouvelles applications ou la maintenance évolutive d'applications existantes.
           </p>
           <!-- Social links + CV download -->
@@ -122,7 +122,7 @@
               <li class="list-inline-item">
                 <button id="CVbtn" type="button" 
                 class="btn btn-secondary btn-lg">
-                  <a href="img/CV/Chauvin_Emilie_Alternance_Concepteur_Developpeur_Informatique.pdf" target="_blank" style="color: #fff; text-decoration: none">Mon CV&nbsp;<i class="fas fa-download"></i></a>
+                  <a href="img/CV/chauvin-emilie-conceptrice-developpeuse-informatique.pdf" target="_blank" style="color: #fff; text-decoration: none">Mon CV&nbsp;<i class="fas fa-download"></i></a>
                 </button>
               </li>
           </ul> <!-- / Social links + CV download -->
@@ -133,14 +133,33 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
           <h2 class="mb-5">Formations</h2>
+          <!-- Latest Formation -->
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Titre professionnel niveau II de Conceptrice Développeuse d'Applications numériques</h3>
+              <div class="subheading mb-3">à Blagnac(31)</div>
+              <div class="subheading mb-3">
+                <a id="link_IPI" href="https://www.ipi-ecoles.com/" target="_blank">
+                  <img id="logo_IPI" src="img/logo-ipi-ecole-informatique.png">
+                </a>
+              </div>
+              <div>
+                <p>Conception UML, développement d'applications numériques, méthodes agiles(Scrum).</p>
+              </div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Septembre 2018 - Septembre 2019</span>
+            </div>
+          </div>
           <!-- F1 -->
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Titre professionnel niveau II de Développeur(se) Logiciel</h3>
+              <h3 class="mb-0">Titre professionnel niveau III de Développeuse Logiciel</h3>
+              <div class="subheading mb-3">à Auch(32)</div>
               <div class="subheading mb-3">
                 <a id="link_Simplon" href="https://simplon.co/" target="_blank">
                   <img id="logo_Simplon" src="img/logo_Simplon.png">
-                </a>à Auch(32)
+                </a>
               </div>
               <div>
                 <p>Culture du numérique, conception et développement web, méthodes agiles(Scrum) sur le modéle pédagogique du dev-bootcamp.</p>
@@ -190,6 +209,19 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Expériences professionnelles</h2>
+          <!-- Latest experience -->
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Alternance Conceptrice Développeuse web</h3>
+              <div class="subheading mb-3">Graphibox à Gimont(32)</div>
+              <p>
+                Conception et développement du site vitrine de l'entreprise avec le framework Vue.js. Maintenance de sites existants. Gestion des clients.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Septembre 2018 - Septembre 2019</span>
+            </div>
+          </div>
           <!-- E1 -->
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
@@ -304,8 +336,8 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://angularjs.org/">
-                <i class="devicon-angularjs-plain-wordmark"></i>
+              <a href="https://vuejs.org/">
+                <i class="devicon-vuejs-plain"></i>
               </a>
             </li>
             <li class="list-inline-item">
